syntax = "proto3";

package connectivity;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.messagename_all) = true;

message Node {
    message Resource {
        // protobuf bytes of corev1.ResourceList
        map<string, bytes> capacity = 1;
        map<string, bytes> allocatable = 2;
    }

    message Condition {
        // protobuf bytes of corev1.NodeCondition
        repeated bytes conditions = 1;
    }

    // protobuf bytes of corev1.NodeSystemInfo
    bytes system_info = 1;
    Resource resources = 2;
    Condition conditions = 3;
}

message Image {
    repeated string names = 1;
    uint64 size_bytes = 2;
}

message Pod {
    message ContainerStatusV1alpha2 {
        repeated bytes v1alpha2 = 1;
    }

    string uid = 1;
    string ip = 2;

    oneof sandbox_status {
        bytes sandbox_v1alpha2 = 11;
    }

    oneof container_status {
        ContainerStatusV1alpha2 container_v1alpha2 = 21;
    }
}

message Data {
    enum Kind {
        STDOUT = 0;
        STDERR = 1;
        OTHER = 2;
    }

    Kind kind = 1;

    bytes data = 11;
}

message Ack {
    message Hash {
        oneof hash {
            // sha256 hex string
            string sha256 = 1;
        }
    }

    oneof value {
        Hash hash = 1;
        string error = 2;
    }
}
